# google_maps_poi_search

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_script.sh
api_json_extraction/app/: dependencies.py  main.py  models.py
api_json_extraction/app/services/: job_manager.py  json_extractor.py  json_indexer.py  pipeline_bridge.py  proxy_manager.py
api_json_extraction/config/: config.py
api_json_extraction/db/: database.py  models.py
api_json_extraction/scripts/: live_busyness_shared.sh  log_to_parquet.py  start_api.sh  start_redis.sh  stop_api.sh  stop_redis.sh
data/: config.yaml  poi_types_list.txt
data/chunks_new/: chunk_1.txt  chunk_10.txt  chunk_11.txt  chunk_12.txt  chunk_13.txt  chunk_14.txt  chunk_15.txt  chunk_16.txt  chunk_17.txt  chunk_18.txt  chunk_19.txt  chunk_2.txt  chunk_20.txt  chunk_21.txt  chunk_22.txt  chunk_23.txt  chunk_24.txt  chunk_25.txt  chunk_26.txt  chunk_27.txt  chunk_28.txt  chunk_3.txt  chunk_4.txt  chunk_5.txt  chunk_6.txt  chunk_7.txt  chunk_8.txt  chunk_9.txt
data/input_geojson/: dudweiler.geojson
data/input_geojson/state_capital_geojsons/: berlin.geojson  bremen_main.geojson  bremen_out_1.geojson  bremen_out_2.geojson  dresden.geojson  düsseldorf.geojson  erfurt.geojson  hamburg_main.geojson  hamburg_out_1.geojson  hamburg_out_2.geojson  hanover.geojson  kiel.geojson  magdeburg.geojson  mainz.geojson  münchen.geojson  potsdam.geojson  schwerin.geojson  stuttgart.geojson  wiesbaden.geojson
live_busyness_extraction/: extractor.py  main.py  proxy_checker.py  requirements.txt
logs/: scraper_logs.txt
notebook/: new_york_city.geojson  shapefile_extraction.ipynb
output/: api_usage.json  completed_search_poi_types.txt  results.csv
poi_searcher/: README.md  requirements.txt  run_script.sh
poi_searcher/data/: config.yaml  sorted_place_types_list.txt
poi_searcher/src/: bbox_utils.py  data_manager.py  main.py  poi_searcher.py
src/: api_key_manager.py  api_manager.py  bbox_utils.py  config.py  data_manager.py  logger.py  main.py  places_scraper.py  poi_searcher.py
web_app/static/: style.css
web_app/static/css/: style.css
web_app/templates/: admin_dashboard.html  admin_jobs.html  admin_login.html  admin_proxies.html  admin_users.html  base.html  index.html  job_canceled.html  job_status.html  jobs.html  login.html  register.html  search.html
