[project]
name = "testing-monitoring-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "chromium>=0.0.0",
    "databases>=0.9.0",
    "fastapi>=0.117.1",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "geopy>=2.4.1",
    "ipykernel>=6.30.1",
    "jinja2>=3.1.2",
    "nominatim>=0.1",
    "osmnx>=2.0.6",
    "pandas>=2.3.2",
    "passlib[bcrypt]>=1.7.4",
    "playwright>=1.56.0",
    "pyarrow>=22.0.0",
    "python-crontab>=3.3.0",
    "python-multipart>=0.0.20",
    "rclone>=0.4.4",
    "redis>=6.4.0",
    "requests-html>=0.10.0",
    "requests-toolbelt>=1.0.0",
    "seaborn>=0.13.2",
    "selenium>=4.32.0",
    "shortuuid>=1.0.13",
    "sqlalchemy>=2.0.43",
    "timezonefinder>=8.1.0",
    "tqdm>=4.67.1",
    "undetected-chromedriver>=3.5.5",
    "uvicorn[standard]>=0.35.0",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "aiodns==3.1.1",
    "aiohttp==3.9.1",
    "aiosignal==1.3.1",
    "appdirs==1.4.4",
    "async-timeout==4.0.3",
    "attrs==23.2.0",
    "babel==2.10.3",
    "beautifulsoup4==4.12.3",
    "blinker==1.7.0",
    "brotli==1.1.0",
    "certifi==2023.11.17",
    "chardet==5.2.0",
    "click==8.1.6",
    "colorama==0.4.6",
    "configobj==5.0.8",
    "contourpy==1.0.7",
    "cryptography==41.0.7",
    "cssselect==1.2.0",
    "cycler==0.11.0",
    "decorator==5.1.1",
    "distro==1.9.0",
    "fonttools==4.46.0",
    "frozenlist>=1.4.1",
    "fs==2.4.16",
    "h11==0.16.0",
    "html5lib==1.1",
    "httplib2==0.20.4",
    "idna==3.6",
    "ipykernel>=6.30.1",
    "jinja2==3.1.2",
    "jsonpatch==1.32",
    "jsonpointer==2.0",
    "jsonschema==4.10.3",
    "krippendorff==0.8.1",
    "lazr-restfulclient==0.14.6",
    "lazr-uri==1.0.6",
    "lxml>=5.3.0",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "matplotlib==3.6.3",
    "mdurl==0.1.2",
    "multidict==6.0.4",
    "netaddr==0.8.0",
    "numpy>=2.1.0",
    "oauthlib==3.2.2",
    "olefile==0.46",
    "packaging==24.0",
    "pexpect==4.9.0",
    "pillow>=10.4.0",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pycares==4.4.0",
    "pygments==2.17.2",
    "pyjwt==2.7.0",
    "pyparsing==3.1.1",
    "pyrsistent==0.20.0",
    "pyserial==3.5",
    "python-dateutil==2.8.2",
    "pytz==2024.1",
    "pyxdg==0.28",
    "pyyaml==6.0.1",
    "requests==2.31.0",
    "rich==13.7.1",
    "scipy>=1.13.0",
    "setuptools==68.1.2",
    "six==1.16.0",
    "soupsieve==2.5",
    "ssh-import-id==5.11",
    "sympy==1.12",
    "typing-extensions>=4.12.2",
    "ufolib2==0.16.0",
    "unicodedata2==15.1.0",
    "urllib3==2.0.7",
    "uvicorn==0.35.0",
    "wadllib==1.3.6",
    "webencodings==0.5.1",
    "wheel==0.42.0",
    "yarl>=1.9.4",
]
